Fixed image distortion on thumbnails Web page thumbnails are no longer distorted to fit the frame and instead fill the entire width and are cropped when they go past the height

--- a/css/newtab.css
+++ b/css/newtab.css
@@ -61,6 +61,9 @@ div {
 	width: 100%;
 }
 
+.bookmark .imgwrapper {
+	overflow: hidden;
+}
 
 .details {
 	border-collapse: collapse;
